// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <RouteLink /> should render correctly for a single path 1`] = `
<Route
  path="/path"
/>
`;

exports[`component <RouteLink /> should render correctly for multiple paths with a default 1`] = `
<Route
  path="(/|/path)"
/>
`;

exports[`component <RouteLink /> should render correctly for multiple paths with no default 1`] = `
<Route
  path="(/|/path)"
/>
`;

exports[`component <RouteLink /> should render correctly for no path 1`] = `
<Route
  path=""
/>
`;
